--- a/charts/forms-flow-analytics/templates/ingress.yaml
+++ b/charts/forms-flow-analytics/templates/ingress.yaml
@@ -4,9 +4,18 @@ metadata:
   labels:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
+  annotations:
+{{ toYaml .Values.ingress.annotations | indent 4 }}
 spec:
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- if or (and .Values.ingress.tls (or ( dict "annotations" .Values.ingress.annotations ) .Values.ingress.selfSigned .Values.ingress.secrets )) .Values.ingress.extraTls }}
   tls:
-    - {}
+  {{- if and .Values.ingress.tls (or ( dict "annotations" .Values.ingress.annotations ) .Values.ingress.secrets .Values.ingress.selfSigned) }}
+    - hosts:
+        - {{ (tpl .Values.ingress.hostname .) | quote }}
+      secretName: {{ printf "%s-tls" (tpl .Values.ingress.hostname .) }}
+    {{- end }}
+  {{- end }}
   rules:
     -
       host: "{{ tpl .Values.ingress.hostname .}}"
