--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -14,9 +14,16 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret
   analytics: forms-flow-analytics #name of forms-flow-analytics component 
 ingress: 
+  ingressClassName: ""
+  annotations:
+#    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
+  tls: true
+  selfSigned: false
+  extraTls:
+    - {}
 image:
   registry: docker.io
   repository: formsflow/forms-flow-webapi
