--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -12,9 +12,16 @@ formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress: 
+  ingressClassName: ""
+  annotations:
+#    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5006
+  tls: true
+  selfSigned: false
+  extraTls:
+   - {}  
 image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
