--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -11,10 +11,16 @@ image:
   tag: v5.1.0 #The image tag to pull from
 
 ingress: 
+  ingressClassName: ""
+  annotations:
+#    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 3001
-
+  tls: true
+  selfSigned: false
+  extraTls:
+   - {} 
 resources:
   limits:
     cpu: 200m
