--- a/charts/forms-flow-web/templates/ingress.yaml
+++ b/charts/forms-flow-web/templates/ingress.yaml
@@ -2,12 +2,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+{{ toYaml .Values.ingress.annotations | indent 4 }}
   labels:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 spec:
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- if or (and .Values.ingress.tls (or ( dict "annotations" .Values.ingress.annotations ) .Values.ingress.selfSigned .Values.ingress.secrets )) .Values.ingress.extraTls }}
   tls:
-    - {}
+  {{- if and .Values.ingress.tls (or ( dict "annotations" .Values.ingress.annotations ) .Values.ingress.secrets .Values.ingress.selfSigned) }}
+    - hosts:
+        - {{ (tpl .Values.ingress.hostname .) | quote }}
+      secretName: {{ printf "%s-tls" (tpl .Values.ingress.hostname .) }}
+    {{- end }}
+  {{- end }}
   rules:
     -
       host: "{{tpl .Values.ingress.hostname .}}"
