--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -7,9 +7,16 @@ formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress: 
+  ingressClassName: ""
+  annotations:
+#    kubernetes.io/ingress.class: "nginx"
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 8080
+  tls: true
+  selfSigned: false
+  extraTls:
+   - {}
 resources:
   limits:
     cpu: 600m
