--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -63,10 +63,10 @@ keycloak:
 
   resources:
     limits:
-      cpu: 700m
+      cpu: 2
       memory: 3Gi
     requests:
-      cpu: 500m
+      cpu: 1.6
       memory: 2Gi
 
   containerSecurityContext:
@@ -79,14 +79,9 @@ keycloak:
       enabled: false
     podSecurityContext:
       enabled: false
-  service:
-    type: ClusterIP
-
+  
   ingress:
-    ingressClassName: ""
     enabled: true
-    annotations:
-#      kubernetes.io/ingress.class: nginx
     extraTls:
       - {}
     hostname: #DEFINE_ME
