--- a/charts/forms-flow-admin/templates/deployment.yaml
+++ b/charts/forms-flow-admin/templates/deployment.yaml
@@ -158,3 +158,5 @@ spec:
         stdin: true
         tty: true
       restartPolicy: Always
+      imagePullSecrets:
+      - name: "{{ .Chart.Name }}"
