--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -7,6 +7,9 @@ formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
   auth: forms-flow-ai-auth
+web:
+  base_custom_url: ""
+  custom_theme_url: ""
 ingress:
   ingressClassName: ""
   annotations:
@@ -28,7 +31,7 @@ resources:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-web
-  tag: v5.1.0
+  tag: v5.2.0-alpha
 config_path: /usr/share/nginx/html/config/
 webclient: "{{.Chart.Name}}"
 webname: formsflow
