--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -18,4 +18,46 @@ data:
   ENABLE_DASHBOARDS_MODULE: "true"
   ENABLE_PROCESSES_MODULE: "true"
   ENABLE_APPLICATIONS_MODULE: "true"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app: {{ .Chart.Name }}-config.template
+  name: {{ .Chart.Name }}-config.template
+data:
+  config.js: |-
+    // runtime-config.js vars
+      window["_env_"] =  {
+        "NODE_ENV": "${NODE_ENV}",
+        "REACT_APP_API_SERVER_URL": "${REACT_APP_API_SERVER_URL}",
+        "REACT_APP_API_PROJECT_URL": "${REACT_APP_API_PROJECT_URL}", 
+        "REACT_APP_BPM_URL": "${REACT_APP_BPM_URL}", 
+        "REACT_APP_KEYCLOAK_CLIENT": "${REACT_APP_KEYCLOAK_CLIENT}", 
+        "REACT_APP_WEB_BASE_URL": "${REACT_APP_WEB_BASE_URL}", 
+        "REACT_APP_WEBSOCKET_ENCRYPT_KEY": "${REACT_APP_WEBSOCKET_ENCRYPT_KEY}", 
+        "REACT_APP_KEYCLOAK_URL_REALM": "${REACT_APP_KEYCLOAK_URL_REALM}", 
+        "REACT_APP_KEYCLOAK_URL": "${REACT_APP_KEYCLOAK_URL}",
+        "REACT_APP_APPLICATION_NAME": "${REACT_APP_APPLICATION_NAME}",
+        "REACT_APP_USER_ACCESS_PERMISSIONS": "${REACT_APP_USER_ACCESS_PERMISSIONS}",
+        "REACT_APP_MT_ADMIN_BASE_URL": "${REACT_APP_MT_ADMIN_BASE_URL}",
+        "REACT_APP_MT_ADMIN_BASE_URL_VERSION": "v1",
+        "REACT_APP_MULTI_TENANCY_ENABLED": "${REACT_APP_MULTI_TENANCY_ENABLED}",
+        "REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH": "${REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH}",
+        "REACT_APP_CUSTOM_SUBMISSION_URL": "${REACT_APP_CUSTOM_SUBMISSION_URL}",
+        "REACT_APP_CUSTOM_SUBMISSION_ENABLED": "${REACT_APP_CUSTOM_SUBMISSION_ENABLED}",
+        "REACT_APP_DOCUMENT_SERVICE_URL": "${REACT_APP_DOCUMENT_SERVICE_URL}",
+        "REACT_APP_DRAFT_ENABLED": "${REACT_APP_DRAFT_ENABLED}",
+        "REACT_APP_DRAFT_POLLING_RATE": "${REACT_APP_DRAFT_POLLING_RATE}",
+        "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}"
 
+        "REACT_APP_OPENTELEMETRY_SERVICE": "${OPENTELEMETRY_SERVICE}"
+        "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${PUBLIC_WORKFLOW_ENABLED}"
+        "REACT_APP_WEB_BASE_CUSTOM_URL": "${WEB_BASE_CUSTOM_URL}"
+        "CUSTOM_THEME_URL": "${CUSTOM_THEME_URL}"
+        "ENABLE_FORMS_MODULE": "${ENABLE_FORMS_MODULE}"
+        "ENABLE_TASKS_MODULE": "${ENABLE_TASKS_MODULE}"
+        "ENABLE_DASHBOARDS_MODULE": "${ENABLE_DASHBOARDS_MODULE}"
+        "ENABLE_PROCESSES_MODULE": "${ENABLE_PROCESSES_MODULE}"
+        "ENABLE_APPLICATIONS_MODULE": "${ENABLE_APPLICATIONS_MODULE}"
+      }
