--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -33,6 +33,8 @@ spec:
           value: "4"
         - name: GUNICORN_CMD_ARGS
           value: "--timeout 300"
+        - name: REDASH_MULTI_ORG
+          value: "false"
         image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
         lifecycle:
           postStart:
