--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -49,15 +49,15 @@ data:
         "REACT_APP_DOCUMENT_SERVICE_URL": "${REACT_APP_DOCUMENT_SERVICE_URL}",
         "REACT_APP_DRAFT_ENABLED": "${REACT_APP_DRAFT_ENABLED}",
         "REACT_APP_DRAFT_POLLING_RATE": "${REACT_APP_DRAFT_POLLING_RATE}",
-        "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}"
+        "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}",
 
-        "REACT_APP_OPENTELEMETRY_SERVICE": "${OPENTELEMETRY_SERVICE}"
-        "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${PUBLIC_WORKFLOW_ENABLED}"
-        "REACT_APP_WEB_BASE_CUSTOM_URL": "${WEB_BASE_CUSTOM_URL}"
-        "CUSTOM_THEME_URL": "${CUSTOM_THEME_URL}"
-        "ENABLE_FORMS_MODULE": "${ENABLE_FORMS_MODULE}"
-        "ENABLE_TASKS_MODULE": "${ENABLE_TASKS_MODULE}"
-        "ENABLE_DASHBOARDS_MODULE": "${ENABLE_DASHBOARDS_MODULE}"
-        "ENABLE_PROCESSES_MODULE": "${ENABLE_PROCESSES_MODULE}"
+        "REACT_APP_OPENTELEMETRY_SERVICE": "${OPENTELEMETRY_SERVICE}",
+        "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${PUBLIC_WORKFLOW_ENABLED}",
+        "REACT_APP_WEB_BASE_CUSTOM_URL": "${WEB_BASE_CUSTOM_URL}",
+        "CUSTOM_THEME_URL": "${CUSTOM_THEME_URL}",
+        "ENABLE_FORMS_MODULE": "${ENABLE_FORMS_MODULE}",
+        "ENABLE_TASKS_MODULE": "${ENABLE_TASKS_MODULE}",
+        "ENABLE_DASHBOARDS_MODULE": "${ENABLE_DASHBOARDS_MODULE}",
+        "ENABLE_PROCESSES_MODULE": "${ENABLE_PROCESSES_MODULE}",
         "ENABLE_APPLICATIONS_MODULE": "${ENABLE_APPLICATIONS_MODULE}"
       }
