--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -27,7 +27,7 @@ forms-flow-web:
   clientid: forms-flow-web
 
 forms-flow-auth:
-  imagesecret: "ewogICJhdXRocyI6IHsKICAgICJkb2NrZXIuaW8iOiB7CiAgICAgICJ1c2VybmFtZSI6ICJ0ZXN0YWNjb3VudCIsCiAgICAgICJwYXNzd29yZCI6ICJ0ZXN0X2FjY291bnRfc2FtcGxlX2RvY2tlcmFjY291bnQiLAogICAgICAiYXV0aCI6ICJhR1ZzYkc4Z2QyOXliR1E9IgogICAgfQogIH0sCiAgImFsZyI6ICJIUzI1NiIKfQ=="
+  imagesecret: "#DEFINE_ME"
 
 
 mongodb:
@@ -47,8 +47,8 @@ mongodb:
       - mongodb
     enabled: true
     rootUser: root
-    rootPassword: "aot123"
-    replicaSetKey: "aot123"
+    rootPassword: "changeme"
+    replicaSetKey: "formsflow"
   initdbScripts:
      init-mongo.js: |
            use admin
@@ -104,7 +104,7 @@ insight_api_key: ""
 redis_host: ""
 redis_port: ""
 redis_pass_code: ""
-draft_enabled: "false"
+draft_enabled: "true"
 export_pdf_enabled: "false"
 
 postgresql-ha:
@@ -132,10 +132,10 @@ postgresql-ha:
     username: postgres
     password: "postgres"
     database: "forms-flow-ai"
-    postgresPassword: "postgres"
+    postgresPassword: "changeme"
 
     repmgrUsername: repmgr
-    repmgrPassword: "repmgr"
+    repmgrPassword: "changeme"
     repmgrDatabase: repmgr
     repmgrLogLevel: NOTICE
     repmgrConnectTimeout: 5
@@ -156,7 +156,6 @@ postgresql-ha:
             GRANT ALL PRIVILEGES ON DATABASE "forms-flow-api" to postgres;
             GRANT ALL PRIVILEGES ON DATABASE "forms-flow-bpm" to postgres;
             set transaction read write;
-            GRANT CONNECT ON DATABASE "forms-flow-idm" to postgres;
             alter database "forms-flow-bpm" set default_transaction_read_only = off;
             alter database "forms-flow-api" set default_transaction_read_only = off;
             alter database "forms-flow-analytics" set default_transaction_read_only = off;
@@ -184,7 +183,7 @@ postgresql-ha:
     containerPorts:
       postgresql: 5432
     adminUsername: admin
-    adminPassword: "admin"
+    adminPassword: "changeme"
     service:
       type: ClusterIP
       ports:
