--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -12,12 +12,11 @@ resources:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
-  analytics: forms-flow-analytics #name of forms-flow-analytics component
   auth: forms-flow-ai-auth 
 ingress:
   ingressClassName: ""
   annotations:
-#    kubernetes.io/ingress.class: nginx
+
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
@@ -28,5 +27,5 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-webapi
-  tag: v5.2.0-alpha #The image tag to pull from
+  tag: v5.2.0 #The image tag to pull from
   
