--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -11,10 +11,16 @@ resources:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
-ingress: 
+ingress:
+  ingressClassName: ""
+  annotations: 
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
+  tls: true
+  selfSigned: false
+  extraTls:
+   - {} 
 image:
   registry: docker.io
   repository: formsflow/forms-flow-data-analysis-api
