--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -15,7 +15,6 @@ formsflow:
 ingress:
   ingressClassName: ""
   annotations:
-#    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5006
@@ -26,4 +25,4 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
-  tag: v5.2.0-alpha #The image tag to pull from
+  tag: v5.2.0 #The image tag to pull from
