--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -13,7 +13,6 @@ web:
 ingress:
   ingressClassName: ""
   annotations:
-#    kubernetes.io/ingress.class: "nginx"
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 8080
@@ -23,15 +22,15 @@ ingress:
    - {}
 resources:
   limits:
-    cpu: 400m
+    cpu: 200m
     memory: 1Gi
   requests:
-    cpu: 300m
+    cpu: 100m
     memory: 512Mi
 image:
   registry: docker.io
   repository: formsflow/forms-flow-web
-  tag: v5.2.0-alpha
+  tag: v5.2.0
 config_path: /usr/share/nginx/html/config/
 webclient: "{{.Chart.Name}}"
 webname: formsflow
