--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,15 +7,23 @@ jobs:
     name: Update deploy
     runs-on: ubuntu-latest 
     steps:
-      # --- #
-      - name: Build and push CONTAINER_NAME
-        uses: ianbelcher/eks-kubectl-action@master
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          cluster_name: ${{ secrets.CLUSTER_NAME }}
-          eks_role_arn: ${{ secrets.EKS_ROLE_ARN }}
-          kubernetes_version: v1.21.0
-          args: set image --record deployment/pod-name pod-name=${{ steps.build.outputs.IMAGE_URL }}
-      # --- #
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ca-central-1  # Change this to your desired region
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+      - name: Update Kube config
+        run: aws eks update-kubeconfig --region ca-central-1 --name forms-flow-eks-staging
+      - name: Deploy to eks
+        run: |
+          kubectl -n qa rollout restart deployment/forms-flow-web
+
