--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,6 +2,9 @@ name: Deploy to EKS
 
 on:
   workflow_dispatch:
+    inputs:
+      region:
+        required: true
 jobs:
   jobName:
     name: Update deploy
@@ -15,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ca-central-1  # Change this to your desired region
+          aws-region: ${{ github.event.inputs.region }}  # Change this to your desired region
       - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
