--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -9,7 +9,7 @@ keycloak:
     - name: KEYCLOAK_ADMIN_USER
       value: admin
     - name: KEYCLOAK_EXTRA_ARGS
-      value: "-Dkeycloak.import=/realm/realm.json" 
+      value: "--import-realm" 
     - name: KEYCLOAK_PROXY_ADDRESS_FORWARDING
       value: "true"
     - name: JAVA_OPTS
@@ -26,7 +26,7 @@ keycloak:
       emptyDir: {}
   extraVolumeMounts: 
     - name: "forms-flow-idm-realm-config"
-      mountPath: "/realm/"
+      mountPath: "/opt/bitnami/keycloak/data/import"
       readOnly: false
     - mountPath: /opt/bitnami/keycloak/themes
       name: formsflow-themes
@@ -48,7 +48,7 @@ keycloak:
   image:
     registry: "docker.io"
     repository: "bitnami/keycloak" 
-    tag: 14.0.0
+    tag: 21.1.1
  
   postgresql:
     enabled: false
