--- a/charts/forms-flow-analytics/templates/secret.yaml
+++ b/charts/forms-flow-analytics/templates/secret.yaml
@@ -7,11 +7,9 @@ metadata:
   name: "{{ .Chart.Name }}"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
-  POSTGRES_PASSWORD: postgres
   PYTHONUNBUFFERED: "0"
-  REDASH_COOKIE_SECRET: redash-selfhosted
+  REDASH_COOKIE_SECRET: "{{ .Values.redash.config.cookie_secret }}"
   REDASH_LOG_LEVEL: INFO
   REDASH_REDIS_URL: "redis://redis-exporter:6379/0" # url of the redis database to connect to
-  REDASH_SECRET_KEY: redash-selfhosted
+  REDASH_SECRET_KEY: "{{ .Values.redash.config.secret_key }}"
   REDASH_MULTI_ORG: 'false'
-  REDASH_DATABASE_PASSWORD: "{{ .Values.database.password }}"
