--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,14 +1,20 @@
-Domain: #<DEFINE_ME>
+Domain: foo #<DEFINE_ME>
 
-database:
-  username: postgres 
-  password: postgres
-  servicename: forms-flow-ai-postgresql-ha-pgpool
+postgresql:
+  host: forms-flow-ai-postgresql-ha-pgpool
   port: 5432
-  url: "postgresql://{{.Values.database.username}}:{{.Values.database.password}}@{{.Values.database.servicename}}:{{.Values.database.port}}/{{.Chart.Name}}"
+
+  username: postgres
+  password: postgres
+
+  externalSecret:
+    name: 
+    usernameKey: username
+    passwordKey: password
 
 formsflow:
   auth: forms-flow-ai-auth
+
 ingress:
   ingressClassName: "" 
   annotations: 
@@ -19,6 +25,7 @@ ingress:
   selfSigned: false
   extraTls:
     - {}  
+
 redis-exporter:
   exporter:
     image:  
@@ -40,14 +47,15 @@ redis-exporter:
     requests:
       cpu: 50m
       memory: 256Mi
+
 redash:
   image:
     registry: docker.io #registry to use
     repository: formsflow/redash # repoisitory for redash image  
     tag: 10.1.5 # tag of image being used
-  database:
-    password: postgres # admin password
-    url: "postgresql://postgres:postgres@forms-flow-analytics-postgresql:5432/postgres" # redash database url - i.e forms-flow-analytics-postgresql
+  config:
+    cookie_secret: 'redash-selfhosted'
+    secret_key: 'redash-selfhosted'
 
 resources:
   limits:
