Added image pull policy

--- a/charts/forms-flow-admin/templates/deployment.yaml
+++ b/charts/forms-flow-admin/templates/deployment.yaml
@@ -146,6 +146,7 @@ spec:
           value: '*'
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: "{{ .Chart.Name }}"
+        imagePullPolicy: Always
         ports:
         - containerPort: {{ .Values.ingress.port }}
         resources:
