--- a/charts/forms-flow-data-analysis/templates/deployment.yaml
+++ b/charts/forms-flow-data-analysis/templates/deployment.yaml
@@ -75,6 +75,7 @@ spec:
 
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: "{{ .Chart.Name }}"
+        imagePullPolicy: Always
         ports:
         - containerPort: {{ .Values.ingress.port }}
         resources:
