--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -24,5 +24,6 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-data-analysis-api
-  tag: v5.1.0 #The image tag to pull from
-
+  tag: v5.2.1 #The image tag to pull from
+openApiKey: ""
+chatbotModelId: "gpt-3.5-turbo"
