--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -18,6 +18,8 @@ data:
   ENABLE_DASHBOARDS_MODULE: "true"
   ENABLE_PROCESSES_MODULE: "true"
   ENABLE_APPLICATIONS_MODULE: "true"
+  {{- include "Values.extractKeyValuePairs" . | nindent 2 }}
+
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -29,6 +31,7 @@ data:
   config.js: |-
     // runtime-config.js vars
       window["_env_"] =  {
+        {{- include "Values.extractKeyValuePairsForJson" . | nindent 8 }}
         "NODE_ENV": "${NODE_ENV}",
         "REACT_APP_API_SERVER_URL": "${REACT_APP_API_SERVER_URL}",
         "REACT_APP_API_PROJECT_URL": "${REACT_APP_API_PROJECT_URL}", 
