--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -2,7 +2,8 @@
 apiVersion: v2
 name: forms-flow-ai
 dependencies:
-  - name: postgresql-ha 
+  - name: postgresql-ha
+    condition: postgresql-ha.enabled 
     repository: https://charts.bitnami.com/bitnami
     version: 10.0.9
   - name: mongodb
