--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -6,7 +6,8 @@ dependencies:
   - name: keycloak
     version: 9.8.0
     repository: "https://charts.bitnami.com/bitnami"
-  - name: postgresql-ha 
+  - name: postgresql-ha
+    condition: postgresql-ha.enabled 
     repository: https://charts.bitnami.com/bitnami
     version: 10.0.9
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
