--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -85,6 +85,7 @@ keycloak:
     ingressClassName: ""
     annotations:
   #    kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/proxy-buffer-size: "300k"
     extraTls:
       - {}
     enabled: true
