--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -32,8 +32,8 @@ data:
   FORMSFLOW_ADMIN_BASE: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api
   MODEL_ID: "Seethal/sentiment_analysis_generic_dataset"
   INSIGHT_API_URL: https://{{tpl (index .Values "forms-flow-analytics" "ingress" "hostname") .}}
-  KEYCLOAK_ENABLE_CLIENT_AUTH: "{{.Values.forms-flow-idm.keycloak.client-auth}}"
-  MULTI_TENANCY_ENABLED: "{{.Values.forms-flow-idm.multitenancy-enabled}}"
+  KEYCLOAK_ENABLE_CLIENT_AUTH: "false"
+  MULTI_TENANCY_ENABLED: "false"
   DATA_ANALYSIS_URL:  https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}
   NODE_ENV: "production"
   CUSTOM_SUBMISSION_URL: ""
