--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -27,3 +27,6 @@ image:
   tag: v5.2.1 #The image tag to pull from
 openApiKey: ""
 chatbotModelId: "gpt-3.5-turbo"
+hpa: 
+  CpuAverageUtilization: 80
+  maxReplicas: 3
