--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -26,4 +26,6 @@ image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
   tag: v5.2.1 #The image tag to pull from
-
+hpa: 
+  CpuAverageUtilization: 80
+  maxReplicas: 3
