Updated env in forms-flow-web and data-analysis-image secret added

--- a/charts/forms-flow-data-analysis/templates/deployment.yaml
+++ b/charts/forms-flow-data-analysis/templates/deployment.yaml
@@ -123,3 +123,5 @@ spec:
         stdin: true
         tty: true
       restartPolicy: Always
+      imagePullSecrets:
+      - name: "{{ .Values.formsflow.auth }}"
