--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -61,5 +61,6 @@ data:
         "ENABLE_PROCESSES_MODULE": "${ENABLE_PROCESSES_MODULE}",
         "ENABLE_APPLICATIONS_MODULE": "${ENABLE_APPLICATIONS_MODULE}",
         "REACT_APP_ENABLE_CHATBOT": "${REACT_APP_ENABLE_CHATBOT}",
-        "REACT_APP_CHATBOT_URL": "${REACT_APP_CHATBOT_URL}"
+        "REACT_APP_CHATBOT_URL": "${REACT_APP_CHATBOT_URL}",
+        "REACT_APP_ENABLE_LOW_CODE_DESIGNER": "${ENABLE_LOW_CODE_DESIGNER}"
       }
