--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -48,4 +48,5 @@ data:
   CHROME_DRIVER_PATH: "/usr/local/bin/chromedriver"
   ENABLE_CHATBOT: "false"
   CHATBOT_URL: "https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}/conversations"
+  ENABLE_LOW_CODE_DESIGNER: "false"
 
