--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -11,6 +11,7 @@ resources:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
+  auth: forms-flow-ai-auth
 ingress:
   ingressClassName: ""
   annotations: 
