--- a/charts/forms-flow-web/templates/deployment.yaml
+++ b/charts/forms-flow-web/templates/deployment.yaml
@@ -37,6 +37,11 @@ spec:
             configMapKeyRef:
               key: CHATBOT_URL
               name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_ENABLE_LOW_CODE_DESIGNER
+          valueFrom:
+            configMapKeyRef:
+              key: ENABLE_LOW_CODE_DESIGNER
+              name: "{{ .Values.formsflow.configmap }}"
         - name: REACT_APP_API_SERVER_URL
           valueFrom:
             configMapKeyRef:
