--- a/charts/forms-flow-bpm/templates/configmap.yaml
+++ b/charts/forms-flow-bpm/templates/configmap.yaml
@@ -57,3 +57,25 @@ metadata:
   labels:
     app: {{ .Chart.Name }}-mail-config
   name: {{ .Chart.Name }}-mail-config
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Chart.Name }}-fb-config
+data:
+  "filebeat.yml": |-
+    filebeat.inputs:
+    - type: log
+      enabled: true
+      paths:
+        - /logs/*
+    output.elasticsearch:
+      hosts: "${ELASTIC_SERVER}"
+      index: "forms-flow-bpm-%{+yyyy.MM.dd}"
+    setup.template.name: "forms-flow-bpm"
+    setup.template.pattern: "forms-flow-bpm-*"
+    setup.template.overwrite: true
+    setup.template.enabled: false
+    setup.template.settings:
+      index.number_of_shards: 1
+    setup.ilm.enabled: false    
