--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -124,7 +124,7 @@ redis_port: ""
 redis_pass_code: ""
 draft_enabled: "true"
 export_pdf_enabled: "false"
-
+elastic_server: "forms-flow-elastic:9200"
 postgresql-ha:
   enabled: true
   postgresql:
