--- a/charts/forms-flow-documents-api/templates/configmap.yaml
+++ b/charts/forms-flow-documents-api/templates/configmap.yaml
@@ -6,4 +6,26 @@ metadata:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 data:
-  
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Chart.Name }}-fb-config
+data:
+  "filebeat.yml": |-
+    filebeat.inputs:
+    - type: log
+      enabled: true
+      paths:
+        - /forms-flow-documents/app/logs/*
+    output.elasticsearch:
+      hosts: "${ELASTIC_SERVER}"
+      index: "forms-flow-documents-api-%{+yyyy.MM.dd}"
+    setup.template.name: "forms-flow-documents-api"
+    setup.template.pattern: "forms-flow-documents-api-*"
+    setup.template.overwrite: true
+    setup.template.enabled: false
+    setup.template.settings:
+      index.number_of_shards: 1
+    setup.ilm.enabled: false
