Updated environment values

--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -52,7 +52,7 @@ data:
         "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}",
 
         "REACT_APP_OPENTELEMETRY_SERVICE": "${OPENTELEMETRY_SERVICE}",
-        "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${PUBLIC_WORKFLOW_ENABLED}",
+        "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${REACT_APP_PUBLIC_WORKFLOW_ENABLED}",
         "REACT_APP_WEB_BASE_CUSTOM_URL": "${WEB_BASE_CUSTOM_URL}",
         "CUSTOM_THEME_URL": "${CUSTOM_THEME_URL}",
         "ENABLE_FORMS_MODULE": "${ENABLE_FORMS_MODULE}",
