updated filebeat options for components

--- a/charts/forms-flow-api/templates/configmap.yaml
+++ b/charts/forms-flow-api/templates/configmap.yaml
@@ -8,6 +8,7 @@ metadata:
 data:
   DATABASE_URL: "{{tpl .Values.database.url .}}"
 ---
+{{- if .Values.elastic_search.enabled }} 
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -29,3 +30,4 @@ data:
     setup.template.settings:
       index.number_of_shards: 1
     setup.ilm.enabled: false
+{{- end}}
