--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: "{{ .Chart.Name }}"
     spec:
       containers:
+      {{- if .Values.elastic_search.enabled }} 
       - name: filebeat-api
         image: docker.elastic.co/beats/filebeat:7.14.0
         env:
@@ -35,6 +36,7 @@ spec:
         - mountPath: /usr/share/filebeat/filebeat.yml
           subPath: filebeat.yml
           name: api-filebeat
+      {{- end}}
       - env:
         - name: MONGODB_URI
           valueFrom:
@@ -188,14 +190,16 @@ spec:
             memory: "{{ .Values.resources.requests.memory }}"
         stdin: true
         tty: true
+     {{- if .Values.elastic_search.enabled }} 
         volumeMounts:
         - name: api-logs
           mountPath: /forms-flow-api/app/logs
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth }}"
       volumes:
       - name: api-logs
       - name: api-filebeat
         configMap:
           name: "{{ .Chart.Name }}-fb-config"
+     {{- end}}
+      restartPolicy: Always
+      imagePullSecrets:
+      - name: "{{ .Values.formsflow.auth }}"
