--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -71,5 +71,6 @@ resources:
 hpa: 
   CpuAverageUtilization: 60
   maxReplicas: 3
-
+elastic_search:
+  enabled: false
 waitFor: "${CAMUNDA_DATABASE_SERVICE_NAME}:${CAMUNDA_DATABASE_PORT}"
