--- a/charts/forms-flow-documents-api/templates/deployment.yaml
+++ b/charts/forms-flow-documents-api/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: "{{ .Chart.Name }}"
     spec:
       containers:
+      {{- if .Values.elastic_search.enabled }} 
       - name: filebeat-documents-api
         image: docker.elastic.co/beats/filebeat:7.14.0
         env:
@@ -35,6 +36,7 @@ spec:
         - mountPath: /usr/share/filebeat/filebeat.yml
           subPath: filebeat.yml
           name: documents-filebeat
+      {{- end}}
       - env:
         - name: JWT_OIDC_ALGORITHMS
           valueFrom:
@@ -127,15 +129,17 @@ spec:
             memory: "{{ .Values.resources.requests.memory }}"
         stdin: true
         tty: true
+
+      {{- if .Values.elastic_search.enabled }} 
         volumeMounts:
         - name: documents-logs
           mountPath: /forms-flow-documents/app/logs
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth }}"
       volumes:
       - name: documents-logs
       - name: documents-filebeat
         configMap:
           name: "{{ .Chart.Name }}-fb-config"
-
+      {{- end }}
+      restartPolicy: Always
+      imagePullSecrets:
+      - name: "{{ .Values.formsflow.auth }}"
